day4/nodename-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodename-pod
spec:
  nodeName: worker01
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
