day4/nodeselector-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodeselector-pod
spec:
  nodeSelector:
    kubernetes.io/env: dev
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
