day4/with-pod-antiaffinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-pod-antiffinity
spec:
  affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: example
              operator: In
              values:
              - with-node-affinity
          topologyKey: kubernetes.io/country
  containers:
  - name: with-pod-affinity
    image: registry.k8s.io/pause:2.0
